+ button on KnowledgePanel different marker icons submit in multi-compose should submit, enter shouldn't + button in message compose should go to Comment every time (not keep state) show file to the right of title on knowledge panel Post to... should include DM streams (warning about posting in a DM being private?) don't select range when clicking on posts w/codeblocks vertical align when selecting tabs on multi-compose ESC dismisses multi-compose if you collapse multi-compose then it should just post a comment (not a type) remove "Post an Answer" from thread view 4px padding left on posts auto-replies with status chagnes s/b replies to the thread assignees is broken on Compose Issue show assignee headshots on knowledgepane assignees aren't getting saved KnowledgePanel should get data from all channels, not just current closed issue markers should not appear in buffers "add another issue" without closing box multi-compose should post to the stream you selected at-mentions popup is in the wrong place should slash-commands work in multi-compose? no. fix padding/clickable area for compose + button

--- a/vscode/src/webviews/app/styles/webview.less
+++ b/vscode/src/webviews/app/styles/webview.less
@@ -213,6 +213,7 @@ body.preload * {
 			border-bottom: none;
 		}
 		.channel-list,
+		.knowledge-panel,
 		.invite-panel {
 			.section {
 				padding: 0 0 0 0;
@@ -276,7 +277,7 @@ body.preload * {
 			}
 		}
 		.mentions-popup {
-			bottom: 40px;
+			// bottom: 40px;
 		}
 		.new-messages-below {
 			&:hover {
@@ -367,7 +368,6 @@ body.preload * {
 				padding: 2px 4px;
 				height: auto;
 				margin-top: 5px;
-				font-size: 10px;
 				border-radius: 5px 5px 0 0;
 				border: 1px solid @base-border-color;
 				border-bottom: none;
